discussion/kv_engine/170541/170541_rev23_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-16 20:06:10.000000000
Message: 
Uploaded patch set 23: Patch Set 22 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 20:30:36.000000000
Message: 
Patch Set 23: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18463/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15672/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15672/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15672/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14519/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44009/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37099/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5382/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17745/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17427/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25830/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
